feat(platform): V553-V572 平台性能与业务链大批次 + 全量自测修复收官
并行会话批次合并提交（500+ 文件）：
- 迁移 V553-V572：采购来源覆盖、IQC 原单补货续接、审计分类、批次身份、
  清空稀疏化、车间领料申请(V559)、余料退仓(V560)、分批生产(V561/V562)、
  IQC 实际入库仓(V563)、领料数量守卫(V564)、让料真实叶仓(V565/V568/V569/V571)、
  销售拣货仓与批量出货(V566/V567)、售价查看权限(V570)
- V572 审计触发器全量 sweep：V560/V561/V568/V569 七张业务表补齐行级审计
  （fail-closed 巡检，不加表不改行）；reset 白名单/契约/迁移总览四处同步到 V572/530
- 本轮全量自测修复：ADR-077 领料申请门接入 16 个 E2E 场景（同车间约束+
  DEPT_PROD 车间回填）、V563 叶子仓夹具对齐、V564 守卫夹具网关、
  五个源码契约对齐、reset 清空表数 276、reconciler 积压循环跑、
  CI 超时放宽（backend 180min）、web 版本戳记 stamp-web
- Flutter：财审责任提示 compact 回归修复（显式 description 必须可见）、
  warehouse->production 架构豁免、format/analyze 清零

本地验收：server 4459 测试除已修三处外全绿（三处单跑复核绿）；
Flutter 2576 全绿；analyze/format 0。